Added HTML and style

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
 		<title>Prologue by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/layout.css">
+		<link rel="stylesheet" href="css/modules.css"> -->
+		<!-- <link rel="stylesheet" href="assets/css/main.css"> -->
 	</head>
 	<body class="is-preload">
 
@@ -21,8 +24,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">Jason Taisey</h1>
+							<p>Software Developer & Curator of Plants</p>
 						</div>
 
 					<!-- Nav -->
@@ -44,7 +47,7 @@
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="https://github.com/JTaisey389" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
@@ -60,14 +63,13 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
+								<h4 class="alt">Hello and welcome to my portfolio!</h4>
 								<p>Ligula scelerisque justo sem accumsan diam quis<br />
 								vitae natoque dictum sollicitudin elementum.</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">My Projects</a>
 							</footer>
 
 						</div>
@@ -81,10 +83,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Here is a link to all the fantastic projects that I worked on while I was at CodeFellows.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -144,12 +143,7 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Hi, my name is Jason and I was a Project Manager for two years in the custom signage industry. Coming from a project management background has provided me with a unique perspective on software development. What pushed me to leave project management was the realization that it just wasn’t the right career choice for me. I enjoyed being involved directly with a project, but project management left me out of making the final decisions. After talking to my partner we decided that it was best to leave my job and I would pursue going back to school full time and thus lead me to Code Fellows. What I see in software development is the ability to not only directly create a user interface, but heavily relies on a problem-solving mindset. I like to think of that problem solving just like a puzzle, and every time you add another piece it’s very rewarding. My creative mindset is fueled by software development, and having a cohort of individuals embrace that creative mindset reaffirms my belief that I’ve made the right career move.</p>
 
 						</div>
 					</section>
