--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Jason's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/base.css">
@@ -23,7 +23,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="https://avatars.githubusercontent.com/u/76636471?s=60&v=4" alt="Photo of author" /></span>
 							<h1 id="title">Jason Taisey</h1>
 							<p>Software Developer & Curator of Plants</p>
 
@@ -45,11 +45,11 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
 							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://github.com/JTaisey389" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto: jdtaisey89@icloud.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -65,8 +65,8 @@
 
 							<header>
 								<h4 class="alt">Hello and welcome to my portfolio!</h4>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<p>Welcome to a collection of the projects that I have <br />
+								worked on over the course of school.</p>
 							</header>
 
 							<footer>
@@ -89,43 +89,43 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://www.linkedin.com/in/jason-taisey-4b229452/" class="image fit"><img src="https://media-exp1.licdn.com/dms/image/C5603AQE1b22W0bNPQw/profile-displayphoto-shrink_400_400/0/1610164476498?e=1619654400&v=beta&t=QCxURpLSkNMBpzXH0VdEAUbKw9hVifwF_F_qZL9h-s4" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>My LinkedIn</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://nacerillo.github.io/Character_Creation_Tool/" class="image fit"><img src="https://nacerillo.github.io/Character_Creation_Tool/assets/hero.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>Magna Nullam</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Character Creation Tool</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="jtaisey389.github.io/chocolatepizza.md/" class="image fit"><img src="https://raw.githubusercontent.com/codefellows/seattle-201d71/main/class-10/lab-a/lab-assets/choco-pizza.png" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Chocolate Pizza</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="https://jtaisey389.github.io/bus-mall.md/" class="image fit"><img src="https://jtaisey389.github.io/bus-mall.md/images/dragon.jpg" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Bus-Mall</h3>
+										</header>
+									</article>
+								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="https://nacerillo.github.io/lab-02-301/" class="image fit"><img src="https://i.pinimg.com/736x/b4/61/06/b46106830b841017ea59870b27ec18dc--narwhals-a-unicorn.jpg" alt="" /></a>
+										<header>
+											<h3>The Gallery Of Horns</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="https://jtaisey389.github.io/PlanetSales/" class="image fit"><img src="https://cdn.pixabay.com/photo/2016/07/02/12/21/eclipse-1492818_960_720.jpg" alt="" /></a>
+										<header>
+											<h3>Interdimensional Planet Sales</h3>
 										</header>
 									</article>
 								</div>
@@ -157,10 +157,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>Let's connect! I am looking for available oportunities within the Software Development feild. I am excited to showcase the hard work and dedication that I have put into my portfolio! Come find me on <a href=""https://media-exp1.licdn.com/dms/image/C5603AQE1b22W0bNPQw/profile-displayphoto-shrink_400_400/0/1610164476498?e=1619654400&v=beta&t=QCxURpLSkNMBpzXH0VdEAUbKw9hVifwF_F_qZL9h-s4">LinkedIn</a> </p>
 
 							<form method="post" action="#">
 								<div class="row">
